[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scripts/StateMachine/StateMachine.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Enemies/Utility/Drop.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Utility/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Stats/Health.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Utility/PlayerDetectionZone.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Utility/SoftCollision.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Enemies/Enemy.gd" type="Script" id=7]
[ext_resource path="res://Resources/Shaders/white_blink.shader" type="Shader" id=8]
[ext_resource path="res://Scenes/Utility/Hitbox.tscn" type="PackedScene" id=9]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 8 )
shader_param/active = true

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
resource_name = "start"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=4]
resource_name = "stop"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 7 )

[node name="ShadowSprite" type="Sprite" parent="."]

[node name="Sprite" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Sprite"]
material = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 1 )

[node name="SoftCollision" parent="." instance=ExtResource( 6 )]

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 5 )]

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
collision_layer = 32

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true

[node name="Health" parent="." instance=ExtResource( 4 )]
max_health = 5

[node name="Drop" parent="." instance=ExtResource( 2 )]

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Hitbox" parent="." instance=ExtResource( 9 )]

[node name="BlinkAnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/start = SubResource( 3 )
anims/stop = SubResource( 4 )

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]

[editable path="SoftCollision"]
[editable path="PlayerDetectionZone"]
[editable path="Hurtbox"]
[editable path="Hitbox"]
